--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/images/favicon/favicon-16x16.png" />
   <link rel="manifest" href="/src/assets/images/favicon/site.webmanifest" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Horse Racing</title>
+  <title>Horse Race Simulator</title>
 </head>
 
 <body>
